--- a/index.html
+++ b/index.html
@@ -1,193 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stark Internet Browser</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Stark Browser Landing Page</title>
+  <style>
+    /* Reset styling */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-      body {
-        font-family: "Arial", sans-serif;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-        position: relative;
-        transition: background 0.3s, color 0.3s;
-      }
+    body {
+      font-family: 'Arial', sans-serif;
+      color: #ffffff;
+      background: #000000;
+      overflow: hidden;
+    }
 
-      body.light {
-        background: linear-gradient(135deg, #f0f0f0, #ffffff);
-        color: #333;
-      }
+    /* Full-screen background video */
+    #background-video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1;
+    }
 
-      body.dark {
-        background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-        color: #ffffff;
-      }
+    /* Centered content */
+    .content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+    }
 
-      .header {
-        text-align: center;
-        margin-top: 20px;
-      }
+    .content h1 {
+      font-size: 4rem;
+      text-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
+      margin-bottom: 20px;
+      display: inline-block;
+      white-space: nowrap;
+      overflow: hidden;
+      border-right: 4px solid #ffcc00;
+      animation: typing 4s steps(30) infinite, blink 0.75s step-end infinite;
+    }
 
-      .header h1 {
-        font-size: 3rem;
-        margin-bottom: 10px;
-        text-transform: uppercase;
-        letter-spacing: 3px;
+    /* Typing animation */
+    @keyframes typing {
+      from {
+        width: 0;
       }
-
-      .header p {
-        font-size: 1.2rem;
-        opacity: 0.9;
-      }
-
-      .clock {
-        font-size: 3rem;
-        background: rgba(255, 255, 255, 0.2);
-        padding: 20px 40px;
-        border-radius: 20px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-        margin-top: 20px;
-      }
-
-      .search-bar {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 50px;
-        overflow: hidden;
-        background-color: #ffffff;
-        margin: 20px 0;
-        width: 60%;
-      }
-
-      .search-bar input {
-        flex: 1;
-        padding: 15px;
-        border: none;
-        outline: none;
-        font-size: 1rem;
-      }
-
-      .search-bar button {
-        padding: 10px;
-        border: none;
-        outline: none;
-        background-color: #ffffff;
-        color: white;
-        font-size: 1.2rem;
-        cursor: pointer;
-        transition: background 0.3s;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .search-bar button img {
-        width: 20px;
-        height: 20px;
-      }
-
-      .search-bar button:hover {
-        background-color: #ffffff;
-      }
-
-      .dark-mode-toggle {
-        position: absolute;
-        top: 20px;
-        right: 80px;
-        font-size: 1rem;
-        padding: 10px 15px;
-        border: none;
-        cursor: pointer;
-        background: #ff6b6b;
-        color: #ffffff;
-        border-radius: 20px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-        transition: background 0.3s;
-      }
-
-      .dark-mode-toggle:hover {
-        background: #e63946;
-      }
-
-      footer {
+      to {
         width: 100%;
-        position: absolute;
-        bottom: 0;
-        text-align: center;
-        padding: 10px 0;
-        background: rgba(0, 0, 0, 0.2);
-        color: #ffffff;
-        transition: background 0.3s, color 0.3s;
       }
+    }
 
-      footer.light {
-        background: rgba(240, 240, 240, 0.9);
-        color: #333;
+    /* Cursor blinking effect */
+    @keyframes blink {
+      0%,
+      100% {
+        border-color: transparent;
       }
-    </style>
-  </head>
-  <body class="dark">
-    <button class="dark-mode-toggle" id="darkModeToggle">Dark Mode</button>
-
-    <div class="header">
-      <h1>Stark Browser</h1>
-      <p>Explore the web with speed and style</p>
-    </div>
-
-    <div class="clock" id="clock">Loading time...</div>
-
-    <form
-      class="search-bar"
-      action="https://duckduckgo.com/"
-      method="get"
-      target="_blank"
-    >
-      <input type="text" name="q" placeholder="Search the web..." required />
-      <button type="submit">
-        <img
-          src="https://imgs.search.brave.com/4NEaI6RgmXqvd-p_esedYzQIh4mBlVsu7G-XDBQgmF0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/Y2l0eXBuZy5jb20v/cHVibGljL3VwbG9h/ZHMvcHJldmlldy9k/b3dubG9hZC1ibGFj/ay1zZWFyY2gtaWNv/bi1idXR0b24tcG5n/LTcwMTc1MTY5NDk3/NDkzNDEwNTB4Zmww/ODgucG5nP3Y9MjAy/NDExMjcxMw"
-          alt="Search"
-        />
-      </button>
-    </form>
-
-    <script>
-      // Clock
-      function updateTime() {
-        const now = new Date();
-        const options = {
-          hour: "2-digit",
-          minute: "2-digit",
-          second: "2-digit",
-        };
-        document.getElementById("clock").textContent = now.toLocaleTimeString(
-          [],
-          options
-        );
+      50% {
+        border-color: #ffcc00;
       }
-      setInterval(updateTime, 1000);
+    }
 
-      const darkModeToggle = document.getElementById("darkModeToggle");
-      darkModeToggle.addEventListener("click", () => {
-        document.body.classList.toggle("dark");
-        document.body.classList.toggle("light");
-        document.querySelector("footer").classList.toggle("dark");
-        document.querySelector("footer").classList.toggle("light");
-        darkModeToggle.textContent = document.body.classList.contains("dark")
-          ? "Light Mode"
-          : "Dark Mode";
-      });
-    </script>
-  </body>
+    .clock {
+      font-size: 2rem;
+      font-weight: bold;
+      text-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
+    }
+
+    /* Footer bar */
+    footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      padding: 10px 0;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.8);
+      color: #ffffff;
+      font-size: 0.9rem;
+    }
+
+    footer a {
+      color: #ffcc00;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <!-- Background Video -->
+  <video id="background-video" autoplay loop muted>
+    <source src="video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <!-- Main Content -->
+  <div class="content">
+    <h1>Welcome to Stark Browser</h1>
+    <div class="clock" id="clock"></div>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    Powered by <a href="#">Stark Innovations</a> | All Rights Reserved
+  </footer>
+
+  <script>
+    // Real-time clock script
+    function updateClock() {
+      const now = new Date();
+      const hours = String(now.getHours()).padStart(2, '0');
+      const minutes = String(now.getMinutes()).padStart(2, '0');
+      const seconds = String(now.getSeconds()).padStart(2, '0');
+      document.getElementById('clock').textContent = `${hours}:${minutes}:${seconds}`;
+    }
+
+    // Update clock every second
+    setInterval(updateClock, 1000);
+    updateClock();
+  </script>
+</body>
 </html>
