Update Landing Page

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
     }
 
     .clock {
-      font-size: 2rem;
       font-weight: bold;
       text-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
+      font-size: 85px;
+      color: #ffffff;
     }
 
     /* Footer bar */
@@ -140,15 +141,13 @@
 </head>
 <body>
   <!-- Background Video -->
-  <video id="background-video" autoplay loop muted>
-    <source src="video.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+<img src="img.jpg">
 
   <!-- Main Content -->
   <div class="content">
     <h1>Welcome to Stark Browser</h1>
     <div class="clock" id="clock"></div>
+    <p>We don't have your data so feel safe.</p>
   </div>
 
   <!-- News Section -->
