--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 </head>
 <body>
   <!-- Background Video -->
-<img src="img.jpg">
+<img src="https://imgs.search.brave.com/fm4GNiJiv6EoqMOUbJXiusbDdUaQfsCSvLJWm_nPOAo/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93YWxs/cGFwZXJjYXZlLmNv/bS93cC93cDY0Nzc2/NTMuanBn">
 
   <!-- Main Content -->
   <div class="content">
