--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
 </head>
 <body>
   <!-- Background Video -->
-<img src="https://imgs.search.brave.com/fm4GNiJiv6EoqMOUbJXiusbDdUaQfsCSvLJWm_nPOAo/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93YWxs/cGFwZXJjYXZlLmNv/bS93cC93cDY0Nzc2/NTMuanBn">
+   <div class="background">
+    <img src="https://imgs.search.brave.com/fm4GNiJiv6EoqMOUbJXiusbDdUaQfsCSvLJWm_nPOAo/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93YWxs/cGFwZXJjYXZlLmNv/bS93cC93cDY0Nzc2/NTMuanBn">
+   </div>
 
   <!-- Main Content -->
   <div class="content">
