--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <!-- Footer -->
   <footer>
     Powered by <a href="#">Stark Innovations</a> | All Rights Reserved
-    <marquee>This is first version of browser I know it has some issue and I am solving it. Future version Realesing Soon</marquee>
+    <marquee>This is first version of browser I know it has some issue and I am solving it. Future version coming Soon</marquee>
   </footer>
 
   <script>
