--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      background-image: url('img.jpg');
+      background-image: url('https://c4.wallpaperflare.com/wallpaper/934/309/154/4k-minimal-iron-man-tony-stark-wallpaper-preview.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
